docs(docsWeb): add dark theme to nav-header, fix margins
Added a simpler way of switching the color theme of nav-header through an Input and CSS
variables.
Adjusted some margins which were cut off or squished.

--- a/apps/scully-docs/src/app/app.component.css
+++ b/apps/scully-docs/src/app/app.component.css
@@ -12,7 +12,7 @@ app-root > .page-content {
   display: flex;
   width: 100%;
   max-height: 100%;
-  padding-top: 80px;
+  padding-top: 86px;
 }
 
 app-root > .page-content .nav-container {
